feat: add smtp to config

--- a/example-config.json
+++ b/example-config.json
@@ -7,5 +7,12 @@
         "secret": "my-secret",
         "authExpMin": 30,
         "authExpRefreshMin": 300
+    },
+    "smtp": {
+        "host": "smtp.gmail.com",
+        "port": 587,
+        "from": "example@gmail.com",
+        "username": "example@gmail.com",
+        "password": "my-password"
     }
 }
